Fized spacing issue in CSS for x-small screens.

--- a/styles/style.css
+++ b/styles/style.css
@@ -424,7 +424,7 @@ div.footerContact {
   }
   div.about,
   div.projects {
-    padding: 5% 3%;
+    padding: 6% 3%;
   }
   div.technology {
     padding: 5%;
